update application front and backend files
