# lib/api-spec/openapi.yaml
@@ -282,6 +282,9 @@ components:
         apyPercent:
           type: number
           nullable: true
+        holdingType:
+          type: string
+          enum: [stock, fund]
       required:
         - id
         - key
@@ -291,6 +294,7 @@ components:
         - unitsHeld
         - costBasisTotal
         - nav
+        - holdingType
     UpdateFund:
       type: object
       properties:
@@ -337,6 +341,12 @@ components:
         txType:
           type: string
           enum: [buy, sell]
+        holdingType:
+          type: string
+          enum: [stock, fund]
+        internalTransferId:
+          type: string
+          nullable: true
       required:
         - id
         - assetType
@@ -345,6 +355,7 @@ components:
         - occurredAt
         - amount
         - txType
+        - holdingType
     GrowthSnapshot:
       type: object
       properties:
